--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,24 @@
 version: '3.8'
 
 services:
-  web:
+  distance-microservice:
+    build: ./CoordinatesAPI
+    networks:
+      - rental
+    command: flask --app address run --host 0.0.0.0
+    ports:
+      - "5000:5000"
+    expose:
+      - 5000
+    env_file:
+      - ./.env
+  main-api:
     build: ./RentalAPI
     depends_on:
       - db
+      - distance-microservice
+    networks:
+      - rental
     command: python manage.py runserver 0.0.0.0:8000
     volumes:
       - .:/app
@@ -16,6 +30,8 @@ services:
       - ./.env
   db:
     image: mysql
+    networks:
+      - rental
     restart: unless-stopped
     ports:
       - "3307:3306"
@@ -28,6 +44,10 @@ services:
       MYSQL_DATABASE: rental_database
       MYSQL_DATABASE_HOST: db
       MYSQL_DATABASE_PORT: 3306
+
+networks:
+  rental:
+    driver: bridge
 
 volumes:
   mysql_data:
